...

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_student_home" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/white"
...
