<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_menu"
        android:icon="@drawable/baseline_table_restaurant_24"
        android:iconTint="@color/black"
        android:title="Menu" />

    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:iconTint="@color/black"
        android:title="Cart" />

    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/baseline_access_time_24"
        android:iconTint="@color/black"
        android:title="Order" />
</menu>